--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "@babel/runtime": "^7.13.17",
+    "@line/liff": "2.9.0",
+    "@material-ui/core": "4.11.3",
+    "@types/react": "17.0.3",
+    "prop-types": "15.7.2",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
+    "react-liff": "0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
