--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.13.17",
+    "@babel/runtime": "7.13.17",
     "@line/liff": "2.9.0",
     "@material-ui/core": "4.11.3",
     "@types/react": "17.0.3",
+    "firebase": "8.4.2",
     "prop-types": "15.7.2",
     "react": "17.0.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.0",
     "react-liff": "0.8.0"
   },
