--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "firebase": "8.4.2",
     "prop-types": "15.7.2",
     "react": "17.0.0",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "1.5.2",
     "react-dom": "17.0.0",
-    "react-liff": "0.8.0"
+    "react-liff": "0.8.0",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
